# hnvue-console

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Packages.props  HnVue.sln  README.md  vcpkg.json
.gitea/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml
.moai/: status_line.sh
.moai/config/sections/: language.yaml  quality.yaml  uid-root.md  user.yaml
.moai/docs/: commit-message-template.md  hal-simulators-guide.md  ipc-client-implementation-progress.md  ipc-client-implementation-summary.md
.moai/memory/: MEMORY.md
.moai/plans/: eventual-popping-bonbon.md
.moai/project/: product.md  structure.md  tech.md
.moai/specs/: requirements-gap-analysis.md
.moai/specs/SPEC-DICOM-001/: acceptance.md  plan.md  rdsr-interface.md  spec.md
.moai/specs/SPEC-DOSE-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-HAL-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-IMAGING-001/: acceptance.md  spec.md
.moai/specs/SPEC-INFRA-001/: acceptance.md  spec.md
.moai/specs/SPEC-INTEGRATION-001/: spec.md
.moai/specs/SPEC-IPC-001/: IMPLEMENTATION_STATUS.md  acceptance.md  spec.md
.moai/specs/SPEC-IPC-002/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-TEST-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-UI-001/: acceptance.md  plan.md  spec.md
.moai/specs/SPEC-UI-002/: acceptance.md  plan.md  research.md  spec.md
.moai/specs/SPEC-WORKFLOW-001/: acceptance.md  plan.md  spec.md
docs/: adapter-audit.md  antigravity-plan.md  antigravity-review-completed-specs.md  antigravity-review-phase1-2.md  architecture.md  mrd.md  prd.md  rtm.md  soup-register.md  windows-setup-guide.md  windows-tasks-report.md  xray-console-sw-research.md  리서치보고서-챗지피티.md
docs/test-reports/: integration-tests.md  unit-tests.md
libs/hnvue-hal/: CMakeLists.txt
libs/hnvue-hal/include/hnvue/hal/: DmaRingBuffer.h  HalTypes.h  IAEC.h  ICollimator.h  IDetector.h  IDoseMonitor.h  IGenerator.h  IPatientTable.h  ISafetyInterlock.h  PluginAbi.h
libs/hnvue-hal/include/hnvue/hal/generator/: CommandQueue.h  GeneratorBase.h
libs/hnvue-hal/proto/: detector_acquisition.proto  hvg_control.proto
libs/hnvue-hal/src/: DeviceManager.cpp  DeviceManager.h
libs/hnvue-hal/src/aec/: AecController.cpp  AecController.h
libs/hnvue-hal/src/buffer/: DmaRingBuffer.cpp
libs/hnvue-hal/src/generator/: CommandQueue.cpp  GeneratorBase.cpp  GeneratorSimulator.cpp  GeneratorSimulator.h
libs/hnvue-hal/src/plugin/: DetectorPluginLoader.cpp  DetectorPluginLoader.h
libs/hnvue-hal/tests/: CMakeLists.txt  test_aec_controller.cpp  test_command_queue.cpp  test_detector_plugin_loader.cpp  test_device_manager.cpp  test_dma_ring_buffer.cpp  test_generator_simulator.cpp  test_icollimator.cpp  test_idosemonitor.cpp  test_ipatienttable.cpp  test_isafetyinterlock.cpp
libs/hnvue-hal/tests/mock/: MockAec.h  MockCollimator.h  MockDetector.h  MockDoseMonitor.h  MockGenerator.h  MockPatientTable.h  MockSafetyInterlock.h
libs/hnvue-imaging/: CMakeLists.txt
libs/hnvue-imaging/engines/default-engine/: DefaultEnginePlugin.cpp
libs/hnvue-imaging/include/hnvue/imaging/: CalibrationManager.h  DefaultImageProcessingEngine.h  IImageProcessingEngine.h  ImagingTypes.h
libs/hnvue-imaging/src/: CalibrationManager.cpp  DefaultImageProcessingEngine.cpp  EngineFactory.cpp
libs/hnvue-infra/: CMakeLists.txt
libs/hnvue-ipc/: CMakeLists.txt
libs/hnvue-ipc/include/hnvue/ipc/: CommandServiceImpl.h  ConfigServiceImpl.h  HealthServiceImpl.h  ImageServiceImpl.h  IpcServer.h
libs/hnvue-ipc/src/: CommandServiceImpl.cpp  ConfigServiceImpl.cpp  HealthServiceImpl.cpp  ImageServiceImpl.cpp  IpcServer.cpp  main.cpp
proto/: CMakeLists.txt  hnvue_aec.proto  hnvue_audit_log.proto  hnvue_command.proto  hnvue_common.proto  hnvue_config.proto  hnvue_dose.proto  hnvue_health.proto  hnvue_image.proto  hnvue_ipc.proto  hnvue_patient.proto  hnvue_protocol.proto  hnvue_qc.proto  hnvue_user.proto  hnvue_worklist.proto
scripts/: README.md  build-all.ps1  e2e-verify.ps1  generate-proto.ps1  generate-proto.sh  run-tests.ps1
src/HnVue.Console/: App.xaml  App.xaml.cs  HnVue.Console.csproj  appsettings.Development.json  appsettings.E2E.json  appsettings.Production.json  appsettings.json
src/HnVue.Dicom/: HnVue.Dicom.csproj
src/HnVue.Dose/: HnVue.Dose.csproj
src/HnVue.Ipc.Client/: HnVue.Ipc.Client.csproj  WorkflowEventSubscriber.cs
src/HnVue.Workflow/: HnVue.Workflow.csproj  WorkflowEngine.cs  WorkflowEngineStub.cs
tests/HnVue.Ipc.Client.Tests/: HnVue.Ipc.Client.Tests.csproj
tests/coverage_gates/: README.md  __init__.py  conftest.py  coverage_gates.json  test_coverage_gates.py  test_verify_coverage.py  verify_coverage.py
tests/cpp/hnvue-hal.Tests/: CMakeLists.txt
tests/cpp/hnvue-imaging.Tests/: CMakeLists.txt
tests/cpp/hnvue-imaging.Tests/src/: test_calibration_manager.cpp  test_default_engine.cpp  test_engine_factory.cpp  test_engine_interface.cpp  test_error_handling.cpp  test_imaging_types.cpp  test_integration_pipeline.cpp  test_performance.cpp
tests/cpp/hnvue-infra.Tests/: CMakeLists.txt  test_directory_structure.cpp
tests/cpp/hnvue-ipc.Tests/: CMakeLists.txt
tests/cpp/hnvue-ipc.Tests/integration/: run-integration-tests.bat  run-integration-tests.sh  test_integration.cpp
tests/cpp/hnvue-ipc.Tests/src/: test_command_service.cpp  test_config_service.cpp  test_health_service.cpp  test_image_service.cpp  test_ipc_server.cpp
tests/docker/: dicom_cstore_test.py  docker-compose.orthanc.yml  docker-compose.simulators.yml
tests/e2e/: README.md
tests/python/: Dockerfile.simulator  pyproject.toml  requirements.txt
tests/scripts/: README.md  __init__.py  consolidate_reports.py  generate_summary.py  rtm_gate.py  test_consolidate_reports.py  test_generate_summary.py  test_rtm_gate.py
tests/traceability/: README.md  __init__.py  conftest.py  rtm.csv  rtm_parser.py  rtm_report.html  rtm_report_generator.py  rtm_validator.py  test_rtm_parser.py  test_rtm_report_generator.py  test_rtm_validator.py  test_traceability.py
(+433 files in other folders)
